--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,36 @@
     <title>Audio and Canvas Demo</title>
 </head>
 <body>
-    <audio controls>
-        <source src="<%= audioPath %>" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <canvas id="myCanvas" width="400" height="400" style="border:1px solid #000;"></canvas>
-
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+            color: #fff;
+        }
+        audio {
+            width: 100%;
+            display: hidden;
+        }
+        canvas {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
+    <div>
+        <p>hello</p>
+    </div>
+    <canvas id="myCanvas" style="border:1px solid #000;"></canvas>
     <script>
-        // JavaScript for canvas or other functionalities
+        const audio = new Audio("<%= audioPath %>")
+        const canvas = document.getElementById("myCanvas")
+
+        canvas.addEventListener("click", () => {
+            console.log("Canvas clicked")
+            audio.play()
+        })
     </script>
+
 </body>
 </html>
